--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,17 +1,25 @@
 .message {
-
+    display: flex;
+    margin-bottom: 10px;
+    flex-direction: column;
 }
 
 .imageAndText {
-
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
 }
 
 .imageAndText img {
-
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 50%;
 }
 
 .text {
-
+    display: flex;
+    flex-direction: column;
 }
 
 .text:after {
@@ -19,13 +27,18 @@
 }
 
 .name {
-
+    font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .messageText {
-
+    background-color: #dcdcdc;
+    padding: 10px;
+    border-radius: 5px;
+    white-space: pre-wrap;
 }
 
 .time {
-
+    padding-left: 10px;
+    font-size: 0.8rem;
 }
